Fixed Overflow problem
Add overflow-x:hidden on html not just body

--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -279,7 +280,7 @@ nav {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .socials-bar {
@@ -621,8 +622,8 @@ nav {
   position: fixed;
   top: 0;
   left: 0;
+  bottom: 0;
   width: 100%;
-  height: 100vh;
   background-color: var(--clr-darkest-transparent);
   display: flex;
   flex-direction: column;
@@ -662,7 +663,7 @@ nav {
 }
 
 .project-view-video {
-  width: 45vw;
+  width: 50vw;
   aspect-ratio: 1/0.5;
 }
 
@@ -694,6 +695,7 @@ nav {
   color: var(--clr-darkest);
   border-radius: 20px;
   padding: 2em;
+  max-height: 90vh;
 }
 
 .contact-form input,
